--- a/lab5/main.css
+++ b/lab5/main.css
@@ -1,7 +1,83 @@
-header {
+* {
+  padding: 0;
+  margin: 0;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+}
+.midblock {
+  padding: 20px;
+  width: 800px;
+  height: 120px;
+  background-color: #b6f5f5;
+  border: 1px solid #cbcbcb;
+  border-bottom: 2px solid black;
+  border-top: none;
+}
+.btnSpace {
+  display: flex;
+  justify-content: center;
+}
+.btn {
+  color: white;
+  cursor: pointer;
+  background: linear-gradient(#00fd00, #008900);
+  width: 220px;
+  height: 30px;
+  text-align: center;
+  padding-top: 7px;
+}
+.midblock:hover {
+  background-color: #ff5555;
+}
+.btn:hover {
+  background: linear-gradient(#008900, #00fd00);
+}
+.modal {
+  display: none;
   position: fixed;
+  z-index: 1;
+  left: 0;
   top: 0;
-  background-color: blue;
-  z-index: 1000;
   width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.modal-content {
+  background-color: #e1ff73;
+  margin: 15% auto;
+  padding: 20px;
+  width: 500px;
+}
+
+.modalHead {
+  text-align: center;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+}
+
+@media (max-width: 800px) {
+  .midblock {
+    width: 100%;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
